Added a basic representation of columns

--- a/src/columns/main.styl
+++ b/src/columns/main.styl
@@ -44,5 +44,12 @@ div.selected-columns
   display flex
   max-width 100%
   flex-direction row
+  margin 0 -0.5em
   div.column-data
     flex 1
+    margin 0 0.5em
+    div.section
+      margin-bottom 0.5em
+      div.unit
+        border 2px solid #888
+        border-top none
