Some basic selection panel tweaks

--- a/src/columns/main.styl
+++ b/src/columns/main.styl
@@ -50,6 +50,7 @@ div.selected-columns
     margin 0 0.5em
     div.section
       margin-bottom 0.5em
+      border-top 2px solid #888
       div.unit
         border 2px solid #888
         border-top none
