Clear selection button

--- a/src/columns/main.styl
+++ b/src/columns/main.styl
@@ -15,9 +15,16 @@ h4.hovered-column-legend
   &.empty
     font-weight 400
 
+div#column-index-container
+  position relative
+  margin 0 -2em
+  button.clear-selection
+    position absolute
+    bottom 1em
+    right 1em
+
 svg#column-index-map
   background-color: lighten(dodgerblue,70%)
-  margin 0 -2em
   path.graticule
     stroke #aaa
     stroke-width 1px
