Added an empty selection panel

--- a/src/columns/main.styl
+++ b/src/columns/main.styl
@@ -40,6 +40,9 @@ svg#column-index-map
     &.selected
       fill alpha(column_color, 80%)
 
+div.selected-columns-empty
+  min-height 400px
+
 div.selected-columns
   display flex
   max-width 100%
