New searchbar kinda works

--- a/src/styles/searchbar.styl
+++ b/src/styles/searchbar.styl
@@ -1,3 +1,6 @@
 .searchbar-holder
   max-width 30em
-  background-color #fff
+  transition margin 300ms
+  .searchbar
+    background-color #fff
+    border-radius 3px
