Some basic infodrawer styles

--- a/src/styles/infodrawer.styl
+++ b/src/styles/infodrawer.styl
@@ -5,8 +5,14 @@
   top 0
   right 0
   .bp3-dialog
+    max-height 100%
     width 100%
     margin 0
     max-height 90vh
+    padding-bottom 0
     .bp3-dialog-body
       overflow-y scroll
+      margin 0 10px
+      padding 10px 0
+    .bp3-dialog-header
+      z-index 500
