Better performance as a blueprintjs card

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -1,6 +1,9 @@
 @require "./searchbar.styl"
 @require "./infodrawer.styl"
 
+*
+  box-sizing border-box
+
 div.ui
   position relative
   margin 20px
