Updated info drawer to not use Material UI for framework

--- a/src/styles/infodrawer.styl
+++ b/src/styles/infodrawer.styl
@@ -8,6 +8,7 @@
   /* This doesn't quite work when
      the page is too tall */
   .infodrawer
+    overflow-y scroll
     max-height 100%
     header
       align-items center
@@ -15,3 +16,6 @@
       flex-direction row
       div
         flex-grow 1
+  .expansion-panel
+    margin-top 1em
+    margin-bottom 0.5em
