Updated panels etc.

--- a/src/styles/expansion-panel.styl
+++ b/src/styles/expansion-panel.styl
@@ -4,11 +4,13 @@
   .expansion-panel-header
     cursor pointer
     &:hover
-      background-color #eee
-    border-bottom: 1px solid #ccc
+      background-color #ddd
     display flex
     padding 0.1em 0.5em
     flex-direction row
     align-items center
     .title
       flex-grow 1
+
+.whitespace-divider
+  height 0.5em
