--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,6 +14,7 @@ body, .main-container, #react, #app-holder {
 }
 .ui {
   z-index: 100;
+  position: relative;
 }
 .map-holder {
   z-index: 1;
@@ -450,6 +451,18 @@ text {
   font-weight: bold;
   letter-spacing: 1px;
   margin-top: 15px;
+}
+.searchbar-filter-container {
+  padding: 0 !important;
+  background-color: rgba(245, 0, 87, 0.08) !important;
+}
+.searchbar-filter-title {
+  font-weight: bold;
+  padding-right: 10px !important;
+  padding-left: 10px !important;
+}
+.filter-list {
+  width: 100%;
 }
 @media(max-width: 850px) {
   .infoDrawer {
