Added some updates to searchbar style

--- a/src/styles/searchbar.styl
+++ b/src/styles/searchbar.styl
@@ -1,9 +1,21 @@
-.searchbar-holder
+.left-stack
   max-width 30em
-  transition margin 300ms
   max-height 90vh
+
+.closeable-card
+  .card-header
+    display: flex
+    align-items: center
+    justify-content space-between
+    margin -20px
+    padding 0 20px
+    border-bottom 1px solid #ddd
+
+.searchbar-holder
+  transition margin 300ms
   display flex
   flex-direction column
+  margin 0
   .searchbar
     background-color #fff
     border-radius 3px
