Make sure you can still drag map under UI container

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -9,4 +9,9 @@ div.ui
   position relative
   margin 20px
   margin-bottom 0
+  // Make sure we can still click
+  // on map in background
+  pointer-events none
+  &>div
+    pointer-events all
 
