Popover to show api route

--- a/src/columns/main.styl
+++ b/src/columns/main.styl
@@ -61,6 +61,15 @@ div.selected-columns
     div.section
       margin-bottom 0.5em
       border-top 2px solid #888
+      max-width 200px
       div.unit
         border 2px solid #888
         border-top none
+      .bp3-popover-target
+        display block
+
+// Popover to display unit details
+div.unit-details
+  padding 0.5em
+  max-height 200px
+  overflow-y scroll
