Closeable card that can also have a header

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -1,9 +1,7 @@
+@require "./global.styl"
 @require "./searchbar.styl"
 @require "./infodrawer.styl"
 @require "./expansion-panel.styl"
-
-*
-  box-sizing border-box
 
 div.ui
   position relative
