--- a/src/styles/searchbar.styl
+++ b/src/styles/searchbar.styl
@@ -1,5 +1,5 @@
 .left-stack
-  max-width 30em
+  max-width 32em
   max-height 90vh
 
 .closeable-card
@@ -10,6 +10,7 @@
     margin -20px
     padding 0 20px
     border-bottom 1px solid #ddd
+    height 40px
 
 .searchbar-holder
   transition margin 300ms
