Updated styles and such

--- a/src/styles/ui-components.styl
+++ b/src/styles/ui-components.styl
@@ -14,3 +14,14 @@
 
 .whitespace-divider
   height 0.5em
+
+.closeable-card
+  .card-header
+    display: flex
+    align-items: center
+    justify-content space-between
+    margin -20px
+    padding 0 10px
+    border-bottom 1px solid #ddd
+    height 40px
+    margin-bottom 10px
