--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -1,7 +1,7 @@
 @require "./global.styl"
 @require "./searchbar.styl"
 @require "./infodrawer.styl"
-@require "./expansion-panel.styl"
+@require "./ui-components.styl"
 
 div.ui
   position relative
