A basic toggle button

--- a/src/styles/searchbar.styl
+++ b/src/styles/searchbar.styl
@@ -1,6 +1,15 @@
 .left-stack
   max-width 32em
-  max-height 90vh
+  height 100vh
+  margin-top -20px
+  margin-bottom -20px
+  padding-top 20px
+  padding-bottom 20px
+  display flex
+  flex-direction: column
+  .spacer
+    flex-grow: 1
+
 
 .searchbar-holder
   transition margin 300ms
