Integrate cesium into a subview

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -8,6 +8,7 @@
     position relative
     margin 20px
     margin-bottom 0
+    z-index 10
     // Make sure we can still click
     // on map in background
     pointer-events none
