--- a/src/styles/searchbar.styl
+++ b/src/styles/searchbar.styl
@@ -7,9 +7,9 @@
   padding-bottom 20px
   display flex
   flex-direction: column
-  .spacer
-    flex-grow: 1
+  justify-content space-between
 
+.map-type-sele
 
 .searchbar-holder
   transition margin 300ms
