--- a/src/styles/searchbar.styl
+++ b/src/styles/searchbar.styl
@@ -7,9 +7,12 @@
   padding-bottom 20px
   display flex
   flex-direction: column
-  justify-content space-between
+  &>div
+    pointer-events: all
+  .spacer
+    flex-grow 1
+    pointer-events: none
 
-.map-type-sele
 
 .searchbar-holder
   transition margin 300ms
