Restyle to remove view resetting

--- a/src/js/map-page/cesium-view/main.styl
+++ b/src/js/map-page/cesium-view/main.styl
@@ -7,3 +7,12 @@
   top: 0;
   bottom: 0;
   width: 100%;
+
+:global
+  div.navigation-control[title="Reset View"]
+    display none
+
+  div.distance-legend
+    border-radius 0px
+    bottom 0
+    right 0
