Fixed info drawer styles, but huge memory leak

--- a/src/styles/infodrawer.styl
+++ b/src/styles/infodrawer.styl
@@ -1,10 +1,9 @@
 .infodrawer-container
   width 30em
   position absolute
-  right 0
-  top 0
-  bottom 0
-  height 90vh
+  right 0px
+  top 20px
+  height 88vh
   pointer-events none
   /* This doesn't quite work when
      the page is too tall */
