--- a/src/styles/searchbar.styl
+++ b/src/styles/searchbar.styl
@@ -39,3 +39,11 @@
         background-color: #eee
     ul
       margin: 0 -20px
+
+.menu-content
+  display flex
+  flex-direction column
+  margin 0 -10px
+  .bp3-button-group
+    margin-bottom 1em
+  margin-bottom -1em
