--- a/src/styles/searchbar.styl
+++ b/src/styles/searchbar.styl
@@ -1,6 +1,12 @@
 .left-stack
-  max-width 32em
-  max-height 90vh
+  max-width 34em
+  max-height 100vh
+  display: flex
+  flex-direction: column
+  &>.closeable-card
+    flex-shrink 1
+    display flex
+    flex-direction: column
 
 .searchbar-holder
   transition margin 300ms
@@ -11,6 +17,7 @@
     background-color #fff
     border-radius 3px
     margin-bottom 0.5em
+    padding-right 5px
   .search-results-container
     flex-shrink 1
     .bp3-card
