Improve styling of menu, especially overflow

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -6,10 +6,11 @@
 
   div.ui
     position relative
-    margin 20px
+    margin 0 20px
     margin-bottom 0
     // Make sure we can still click
     // on map in background
     pointer-events none
     &>div
+      padding 20px 0
       pointer-events all
