--- a/src/styles/searchbar.styl
+++ b/src/styles/searchbar.styl
@@ -53,4 +53,15 @@
   margin 0 -10px
   .bp3-button-group
     margin-bottom 1em
+    button
+      margin-bottom 2px
   margin-bottom -1em
+
+// Should be maybe moved to a card-specific location
+.card-header-left button
+  margin-right 5px
+
+.card-content
+  h2:first-child
+    margin-top 0
+  overflow-y scroll
