--- a/src/styles/ui-components.styl
+++ b/src/styles/ui-components.styl
@@ -16,12 +16,16 @@
   height 0.5em
 
 .closeable-card
+  padding 0
+  min-height 40px
   .card-header
     display: flex
     align-items: center
     justify-content space-between
-    margin -20px
-    padding 0 10px
+    padding 5px
     border-bottom 1px solid #ddd
     height 40px
-    margin-bottom 10px
+  .card-content
+    padding 20px
+    padding-top 10px
+    min-height 0
