Fixed position of layer switcher

--- a/src/styles/searchbar.styl
+++ b/src/styles/searchbar.styl
@@ -1,8 +1,10 @@
 .left-stack
   max-width 34em
-  max-height 100vh
+  height 100vh
   display: flex
   flex-direction: column
+  .spacer
+    flex-grow 1
   &>.closeable-card
     flex-shrink 1
     display flex
