Some basic improvements to map loading

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -20,9 +20,15 @@ body, .main-container, #react, #app-holder {
 }
 .map-holder {
   z-index: 1;
+  position: fixed;
+  top 0
+  left 0
+  bottom 0
+  right 0
+  height 100vh
 }
 #map {
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   width: 100%;
