--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -255,7 +255,7 @@ text {
   line-height: 24px;
 }
 .map-source-attr:last-child {
-  margin-bottom: 25px;
+  //margin-bottom: 25px;
 }
 .attr {
   font-family: 'Montserrat', sans-serif;
