--- a/src/styles/infodrawer.styl
+++ b/src/styles/infodrawer.styl
@@ -11,7 +11,7 @@
     pointer-events all
     overflow-y scroll
     max-height 100%
-    padding 10px
+    padding 15px
     header
       align-items center
       display flex
@@ -23,7 +23,12 @@
     margin-bottom 0.5em
     .expansion-panel-header
       background-color #eee
+      border-radius 5px
+      padding 5px
       margin-bottom 0.2em
-      margin 0.2em -10px 0.2em -10px
-      border-bottom: 1px solid #ccc
-      border-top: 1px solid #ccc
+      // margin 0.2em -10px 0.2em -10px
+      // border-bottom: 1px solid #ccc
+      // border-top: 1px solid #ccc
+
+.expansion-children
+  margin-left 10px
