--- a/src/styles/infodrawer.styl
+++ b/src/styles/infodrawer.styl
@@ -9,7 +9,6 @@
      the page is too tall */
   .infodrawer
     pointer-events all
-    overflow-y scroll
     max-height 100%
     padding 15px
     header
@@ -29,6 +28,11 @@
       // margin 0.2em -10px 0.2em -10px
       // border-bottom: 1px solid #ccc
       // border-top: 1px solid #ccc
+
+.overflow-container
+  overflow-y scroll
+  max-height 70vh
+
 
 .expansion-children
   margin-left 10px
