move search results and filter info into menu panel

--- a/src/styles/searchbar.styl
+++ b/src/styles/searchbar.styl
@@ -60,17 +60,18 @@
           position: absolute
           left: 0
 
-  .search-results
-    li
-      padding: 0.2em 20px
-      cursor pointer
-      &:first-child
-        border-top 1px solid #ddd
-      border-bottom 1px solid #ddd
-      &:hover
-        background-color: #eee
-    ul
-      margin: 0 -20px
+.search-results
+  li
+    padding: 0.2em 20px
+    cursor pointer
+    &:first-child
+      border-top 1px solid #ddd
+    border-bottom 1px solid #ddd
+    &:hover
+      background-color: #eee
+  ul
+    list-style none
+    margin: 0 -60px
 
 .menu-content
   display flex
