--- a/src/styles/searchbar.styl
+++ b/src/styles/searchbar.styl
@@ -61,8 +61,11 @@
           left: 0
 
 .search-results
+  max-height 70vh
+  width 20vw
+  overflow auto
   li
-    padding: 0.2em 20px
+    padding: 0.2em 0 0.2em 20px
     cursor pointer
     &:first-child
       border-top 1px solid #ddd
@@ -71,7 +74,9 @@
       background-color: #eee
   ul
     list-style none
-    margin: 0 -60px
+    margin: 0 
+    margin-left: -60px
+    margin-right: -40px
 
 .menu-content
   display flex
