--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -72,6 +72,7 @@ body, .main-container, #react, #app-holder {
     background: #fff;
     margin:0;
     width: 25vw;
+    border-bottom: 2px solid #ddd;
     margin-left: -20px;
     padding-left: 20px;
     padding-top: 10px
