--- a/src/styles/ui-components.styl
+++ b/src/styles/ui-components.styl
@@ -2,9 +2,12 @@
   border-radius 3px
   padding 0
   .expansion-panel-header
+    z-index: 1;
+    position sticky
+    top 0px
     cursor pointer
     &:hover
-      background-color #ddd
+      background-color #E1E8ED
     display flex
     padding 0.1em 0.5em
     flex-direction row
