--- a/src/styles/infodrawer.styl
+++ b/src/styles/infodrawer.styl
@@ -21,7 +21,7 @@
     margin-top 1em
     margin-bottom 0.5em
     .expansion-panel-header
-      background-color #eee
+      background-color #CED9E0
       border-radius 5px
       padding 5px
       margin-bottom 0.2em
