info panel styles

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -237,6 +237,10 @@ text {
   margin-left: 10px;
 }
 
+.age-ma {
+  font-style italic
+}
+
 .lith-chip {
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
@@ -274,8 +278,6 @@ text {
   font-weight: 700;
 }
 .line-attr {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 85%;
   display: block;
   margin-left: 15px;
 }
@@ -312,6 +314,11 @@ text {
   font-weight: 700 !important;
   margin-right: 10px !important;
   padding-right: 0 !important;
+  display: flex;
+  align-items: baseline;
+}
+.expansion-summary-title-help{
+  margin-left 5px;
 }
 .expansion-panel-detail {
   display: block !important;
@@ -321,7 +328,8 @@ text {
   display: block !important;
 }
 .expansion-panel-detail-header {
-  margin-top: -10px;
+  margin: 0;
+  margin-top: 5px;
   font-size: 80%;
 }
 .externalLink {
