--- a/src/styles/infodrawer.styl
+++ b/src/styles/infodrawer.styl
@@ -10,8 +10,10 @@
   .infodrawer
     pointer-events all
     max-height 100%
-    padding 15px
+    padding 0
     header
+      padding 15px
+      padding-bottom 0
       align-items center
       display flex
       flex-direction row
@@ -20,10 +22,13 @@
   .expansion-panel
     margin-top 1em
     margin-bottom 0.5em
+    .sub-panel-header
+      background-color #EBF1F5
+      padding 5px
+      border-radius 5px 0 0 5px
     .expansion-panel-header
       background-color #CED9E0
-      border-radius 5px
-      padding 5px
+      padding 10px
       margin-bottom 0.2em
       // margin 0.2em -10px 0.2em -10px
       // border-bottom: 1px solid #ccc
@@ -36,3 +41,9 @@
 
 .expansion-children
   margin-left 10px
+
+.macrostrat-detail{
+  margin: 15px 0px;
+  display: flex;
+  align-items: center;
+}
