re-added the best-matches/ all matches modifcations for filters; changed filter background color

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -478,14 +478,13 @@ text {
   border-radius: 0;
 }
 .filter-container {
-  display: flex;
-  flex-wrap: wrap;
-  position: sticky;
-  top: 1px;
+ 
   margin-bottom: 5px;
 }
 .filter-tag {
-  margin-right: 3px;
+  display: flex;
+  align-items: baseline;
+  margin: 5px;
 }
 .searchbar-filter-title {
   font-weight: bold;
