--- a/packages/column-footprint-editor/src/components/map/map.css
+++ b/packages/column-footprint-editor/src/components/map/map.css
@@ -23,3 +23,9 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
+.map-tools-control {
+  position: absolute;
+  top: 160px;
+  right: 9px;
+}
