--- a/packages/column-footprint-editor/src/components/editor/main.css
+++ b/packages/column-footprint-editor/src/components/editor/main.css
@@ -20,7 +20,7 @@
 
 .new-column-collapse {
   border-style: solid;
-  border-color: black;
+  border-color: #ced9e0;
   border-radius: 5px;
   border-width: 1px;
   margin-bottom: 5px;
@@ -57,4 +57,16 @@
   flex-direction: column;
   align-items: center;
   max-width: 250px;
+}
+
+.column-nav-bar {
+  margin-top: -20px;
+  margin-left: -20px;
+  margin-right: -20px;
+}
+.column-nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 10px;
 }
