Improvements to map page styling

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -15,21 +15,19 @@ body, .main-container, #react, #app-holder {
 *::-webkit-scrollbar {
   display: none;
 }
-.ui {
-  z-index: 100;
-  position: relative;
-}
+
 .map-holder {
   z-index: 1;
-  position: fixed;
+  position: absolute;
   top 0
   left 0
   bottom 0
   right 0
-  height 100vh
+  height 100%
 }
+
 #map {
-  position: fixed;
+  position: absolute;
   top: 0;
   bottom: 0;
   width: 100%;
