--- a/src/map-interface/components/info-drawer/main.module.styl
+++ b/src/map-interface/components/info-drawer/main.module.styl
@@ -1,2 +1,46 @@
+
+
+.infodrawer-container
+  width 30em
+  position absolute
+  right 0px
+  top 0px
+  bottom: 0px
+  pointer-events none
+  display flex
+  flex-direction column
+  :global
+    .expansion-children
+      margin-left 10px
+
+    .macrostrat-detail
+      margin: 15px 0px;
+      display: flex;
+      align-items: center;
+
+.infodrawer
+  pointer-events all
+  max-height 100%
+  display flex
+  flex-direction column
+  padding 0
+  overflow hidden
+  header
+    padding 15px
+    padding-bottom 0
+    align-items center
+    display flex
+    flex-direction row
+    div
+      flex-grow 1
+
 :global
-  @require "./global-styles.styl"
+  @require "./expansion-panel.styl"
+
+
+.infodrawer-body
+  overflow-y scroll
+  flex-shrink 1
+
+.spacer
+  flex-grow 1
