tag square; switch/label layout; search styles

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -403,8 +403,13 @@ body, .main-container, #react, #app-holder {
 }
 .filter-tag {
   display: flex;
-  align-items: baseline;
+  align-items: end;
+  justify-content: space-between;
   margin: 5px;
+}
+.flex{
+  display: flex;
+  align-items: baseline;
 }
 .searchbar-filter-title {
   font-weight: bold;
