--- a/src/styles/searchbar.styl
+++ b/src/styles/searchbar.styl
@@ -44,7 +44,7 @@
 
 .search-results
   max-height 70vh
-  width 23vw
+  max-width 310px
   overflow auto
   padding: 0px 15px 0px 15px;
   li
@@ -89,4 +89,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.filter-tongue{
+  background-color: #def1fff2;
+  padding: 5px;
+  padding-bottom: 2px;
+  margin: 5px;
+  max-width: 300px;
+  margin-bottom: 7px;
+  margin-top: -9px;
 }
