remove all filters button

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -416,6 +416,12 @@ body, .main-container, #react, #app-holder {
 .filter-list {
   width: 100%;
 }
+.remove{
+  font-size: 10px;
+  color: orangered;
+  text-decoration: underline;
+  cursor: pointer;
+}
 @media(max-width: 850px) {
   .infoDrawer {
     max-width: 100% !important;
