clean up of xDD panel

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -236,7 +236,6 @@ body, .main-container, #react, #app-holder {
   line-height: 15px;
 }
 .ref-link {
-  color: #000;
   font-weight: bold;
   text-decoration: none;
 }
@@ -267,14 +266,13 @@ body, .main-container, #react, #app-holder {
 .article-title, .article-title > a {
   font-size: 1em;
   font-weight: 700;
-  color: #000000;
   text-decoration: none;
 }
 .sub-title {
   font-size: 80%;
 }
 .quotes {
-  margin-top: -10px;
+  margin-top: 0px;
 }
 .gdd-snippet {
   font-size: 90%;
@@ -359,6 +357,7 @@ body, .main-container, #react, #app-holder {
 .journal-title-text {
   font-size: 20px;
   font-weight: bold;
+  margin-bottom: 0;
 }
 .journal-source {
   font-size: 14px;
