--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -38,3 +38,14 @@
     flex-direction: column
   .panel-container > *
     transition width 300ms
+
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .panels-overlay{
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+  }
+}
