--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -59,23 +59,23 @@ body, .main-container, #react, #app-holder {
   outline: none;
 }
 
-.searchresult-header {
+.searchresult-header 
   font-size: 1.1em !important;
-    font-weight: bold !important;
-    lettering-spacing: 2px !important;
-    color: #333 !important;
-    position: sticky;
-    top: 0px;
-    /* height: 37px; */
-    background: #fff;
-    margin:0;
-    width: 25vw;
-    border-bottom: 2px solid #ddd;
-    margin-left: -20px;
-    padding-left: 20px;
-    padding-top: 10px
-    padding-bottom: 10px;
-}
+  font-weight: bold !important;
+  lettering-spacing: 2px !important;
+  color: #333 !important;
+  position: sticky;
+  top: 0px;
+  background: #fff;
+  border-bottom: 2px solid #ddd;
+  margin:0;
+  width: 100%;
+  padding-top: 10px
+  padding-bottom: 10px;
+  .text
+    padding-left: 15px;
+
+
 .searchresult-item {
   font-size: 0.95em !important;
 }
