--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -1,5 +1,14 @@
+@require "../../packages/ui-components/src/shared/colors"
+
 *
   box-sizing border-box
+
+:root
+  --accent-color: $light-gray3
+  --accent-hover-color: $light-gray1
+  --accent-border-color: $gray5
+  --accent-secondary-color: #EBF1F5
+  --accent-secondary-hover-color: #F5F8FA
 
 body {
   color: #333;
