--- a/src/styles/searchbar.styl
+++ b/src/styles/searchbar.styl
@@ -87,7 +87,7 @@
 }
 
 .filter-tongue{
-  background-color: #def1fff2;
+  background-color: #def1ff;
   padding: 5px;
   padding-bottom: 7px;
   margin: 5px;
