Added font family to css variables

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -9,12 +9,13 @@
   --accent-border-color: $gray5
   --accent-secondary-color: #EBF1F5
   --accent-secondary-hover-color: #F5F8FA
+  --main-font: "Source Sans Pro", sans-serif
 
 body {
   color: #333;
   margin:0;
   padding:0;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: var(--main-font);
 }
 body, .main-container, #react, #app-holder {
   height: 100%;
