remove_all stays next to chevron btn

--- a/src/styles/searchbar.styl
+++ b/src/styles/searchbar.styl
@@ -83,7 +83,6 @@
 .filter-name-container{
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 
 .filter-tongue{
@@ -96,6 +95,13 @@
   margin-top: -9px;
 }
 
+.filter-tongue-actions{
+  display: flex;
+  align-items: center;
+  margin-left: 15px;
+  white-space: nowrap;
+
+}
 
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
