mobile styles; no border radii; search goes away when infoPanel is open; infoPanel is position absolute to bottom

--- a/src/map-interface/components/card.module.styl
+++ b/src/map-interface/components/card.module.styl
@@ -29,3 +29,9 @@
     padding 5px
     border-bottom 1px solid #ddd
     height 40px
+
+@media screen and (max-width: 768px) {
+  .closeable-card{
+    border-radius: 0px;
+  }
+}
