--- a/src/map-interface/components/info-drawer/main.module.styl
+++ b/src/map-interface/components/info-drawer/main.module.styl
@@ -54,10 +54,16 @@
 }
 
 @media screen and (max-width: 768px) {
+  .infodrawer{
+    max-height: 60%;
+    width: 100%;
+    border-radius: 0px;
+    position: absolute;
+    bottom: 0px;
+  }
   .infodrawer-container{
     width: 100vw;
     height: 100vh;
     z-index: 200;
-    pointer-events: all;
   }
 }
