--- a/src/styles/searchbar.styl
+++ b/src/styles/searchbar.styl
@@ -100,24 +100,34 @@
   align-items: center;
   margin-left: 15px;
   white-space: nowrap;
-
 }
 
-@media only screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   /* For mobile phones: */
   .navbar-holder{
     width: 100vw;
     left:0;
   }
-  .searchbar{
+  .bp3-input{
+    border-radius: 0;
+  }
+  .searchbar-holder .searchbar{
     margin-bottom: 0;
+    border-radius: 0;
   }
   .search-results{
     max-height: 93vh;
     width: 100vw;
     max-width:100vw;
+    border-radius: 0;
+  }
+  .no-results{
+    border-radius: 0;
   }
   .filter-tongue{
     max-width: 100vw;
+    margin: 0;
+    border-radius: 0;
+    margin-top: -3px;
   }
 }
