--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -217,6 +217,11 @@ body, .main-container, #react, #app-holder {
   border-radius: 5px;
 }
 
+.flat-btn{
+  padding: 0px 10px;
+  min-height: 0px;
+}
+
 .map-source {
   margin-top: 30px;
 }
@@ -227,7 +232,6 @@ body, .main-container, #react, #app-holder {
 .map-source-attr {
   display: block;
   padding-top: 10px;
-  line-height: 24px;
 }
 .map-source-attr:last-child {
   //margin-bottom: 25px;
@@ -286,6 +290,8 @@ body, .main-container, #react, #app-holder {
 }
 .gdd-snippet {
   font-size: 90%;
+  margin-top: 4px;
+  margin-bottom: 8px;
 }
 .hl {
   font-style: normal;
