Added a basic performance tracker

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -26,15 +26,21 @@ body, .main-container, #react, #app-holder {
   display: none;
 }
 
-.map-holder {
+.map-backend
   z-index: 1;
   position: absolute;
+  display flex
+  flex-direction: row
   top 0
   left 0
   bottom 0
   right 0
   height 100%
-}
+  &>div
+    flex 1
+    height 100%
+
+
 
 #map {
   position: absolute;
