columns have a description field and column-groups can have specified colors chosen by a color-picker

--- a/packages/column-footprint-editor/src/components/blueprint/main.css
+++ b/packages/column-footprint-editor/src/components/blueprint/main.css
@@ -10,7 +10,11 @@
   overflow: scroll;
   max-height: 200px;
 }
-
+.drag-bar-top {
+  height: 50px;
+  width: 100%;
+  z-index: 22;
+}
 .projects-drop-down {
   display: flex;
   align-items: flex-start;
